millstone rework (sadly no jei support yet)